changing this fork to build from RHEL, and use the generic image in the relevant Dockerfiles by default

--- a/OracleWebLogic/dockerfiles/12.2.1/Dockerfile.generic
+++ b/OracleWebLogic/dockerfiles/12.2.1/Dockerfile.generic
@@ -36,7 +36,8 @@
 #
 # Pull base image
 # ---------------
-FROM oraclelinux:latest
+#FROM oraclelinux:latest
+FROM registry.access.redhat.com/rhel:latest
 
 # Maintainer
 # ----------
