--- a/OracleWebLogic/samples/1221-medrec/Dockerfile
+++ b/OracleWebLogic/samples/1221-medrec/Dockerfile
@@ -21,7 +21,7 @@
 
 # Pull base image
 # ---------------
-FROM oracle/weblogic:12.2.1-developer
+FROM oracle/weblogic:12.2.1-generic
 
 # Maintainer
 # ----------
